--- a/src/component/loader/Loader.css
+++ b/src/component/loader/Loader.css
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh; /* Or adjust as needed */
-  background-color: rgba(255, 255, 255, 0.8); /* Optional overlay */
+  background-color: rgba(0, 0, 0, 0.8); /* Optional overlay */
   position: fixed;
   top: 0;
   left: 0;
@@ -13,7 +13,7 @@
 }
 
 .spinner {
-  border: 4px solid rgba(0, 0, 0, 0.1);
+  border: 4px solid whitesmoke;
   border-left-color: #333;
   border-radius: 50%;
   width: 40px;
