--- a/src/component/navbar/Navbar.css
+++ b/src/component/navbar/Navbar.css
@@ -58,7 +58,54 @@
   color: white;
   font-size: 20px;
 }
-/* .navbar__links li:first-child:hover {
-  transition: color 0.3s ease;
-  font-size: 20px;
-} */
+
+.navbar__powered-by {
+  font-size: 14px;
+  font-weight: normal;
+  color: #b19999;
+  margin-left: 10px;
+}
+
+.github-link {
+  position: relative;
+}
+
+.github-card {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-80%); /* shift slightly left */
+  background-color: rgb(44, 41, 41);
+  color: rgb(45, 41, 41);
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  min-width: 150px;
+  z-index: 100;
+}
+
+.github-link:hover .github-card {
+  display: block;
+}
+
+.github-card a {
+  display: block;
+  margin: 5px 0;
+  color: white;
+  text-decoration: none;
+}
+
+.github-card a:hover {
+  text-decoration: underline;
+}
+
+.github-card-title {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: rgb(233, 128, 128);
+}
+
+.github-link {
+  cursor: pointer;
+}
