--- a/src/component/landingPage/meditationPage/backbutton/BackButton.css
+++ b/src/component/landingPage/meditationPage/backbutton/BackButton.css
@@ -5,7 +5,7 @@
   border-radius: 6px;
   border: none;
   background: transparent;
-  color: #ececec; /* blue-600 */
+  color: #ececec;
   font-size: 14px;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
@@ -17,7 +17,7 @@
 }
 
 .back-button:hover {
-  color: #000000da; /* darker blue */
+  color: #000000da;
   text-decoration: underline;
 }
 
