--- a/src/component/loader/Loader.css
+++ b/src/component/loader/Loader.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh; /* Or adjust as needed */
-  background-color: rgba(0, 0, 0, 0.8); /* Optional overlay */
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
   left: 0;
