--- a/src/component/home/Home.css
+++ b/src/component/home/Home.css
@@ -1,5 +1,9 @@
 .home-container {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+  margin-top: 40px;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
 }
