--- a/src/component/landingPage/meditationPage/demoMeditation/DemoMeditation.css
+++ b/src/component/landingPage/meditationPage/demoMeditation/DemoMeditation.css
@@ -1,4 +1,4 @@
-.meditation-page {
+.demo-meditation-page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,8 +7,50 @@
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   margin-bottom: 100px;
+  margin-top: 500px;
 }
 
-.meditation-video-container {
-  margin-top: -200px;
+.demo-meditation-video-container {
+  margin-top: -400px;
+}
+
+.demo-meditation-video-container h2 {
+  margin-top: 200px;
+}
+
+@media (max-width: 768px) {
+  .demo-meditation-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 100px;
+    margin-top: 10rem;
+  }
+  .demo-meditation-video-container {
+    margin-top: -200px;
+  }
+
+  .demo-meditation-video-container h2 {
+    margin-top: 20px;
+  }
+
+  .demo-meditation-video-container video {
+    width: 100%;
+    max-width: 800px;
+    height: auto;
+    border-radius: 16px;
+    box-shadow: 0 4px 18px rgba(0, 0, 0, 0.25);
+    display: flex;
+  }
+
+  .demo-meditation-page .userLogin-button {
+    display: flex;
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+  }
 }
