--- a/src/component/landingPage/moodSelector/MoodSelector.css
+++ b/src/component/landingPage/moodSelector/MoodSelector.css
@@ -6,9 +6,9 @@
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
   background: #fff;
   text-align: center;
-  font-family: system-ui, sans-serif;
   position: relative;
-  top: 125px;
+  top: 95px;
+  max-height: 80%;
   z-index: 2000;
 }
 
@@ -128,4 +128,119 @@
   border-radius: 12px;
   background: gray;
   font-size: 0.95rem;
+}
+
+@media (max-width: 768px) {
+  .mood-card {
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    max-width: 380px;
+    padding: 1.5rem 1rem;
+    z-index: 9999;
+    min-height: 30%;
+    max-height: 80vh;
+    margin-top: 10px;
+  }
+
+  .close-btn {
+    top: -14px;
+    right: 6px;
+    font-size: 12px;
+  }
+
+  .emoji-options {
+    flex-wrap: wrap;
+    gap: 0.75rem;
+    margin-bottom: 1rem;
+  }
+
+  .emoji-button {
+    width: 40px;
+    height: 40px;
+    font-size: 1.5rem;
+  }
+
+  .emotion-wheel {
+    width: 220px;
+    height: 220px;
+  }
+
+  .feeling-item {
+    width: 70px;
+    height: 70px;
+    font-size: 0.7rem;
+    padding: 0.35rem;
+  }
+
+  .output-box {
+    margin-top: 2rem;
+    font-size: 0.85rem;
+  }
+
+  .mood-card .emoji-options {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 0.75rem;
+    margin-bottom: 1.5rem;
+  }
+
+  .mood-card .emoji-button {
+    width: 20px !important;
+    height: 50px !important;
+    flex: 0 0 auto;
+    padding: 0;
+    margin: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    font-size: 1.5rem;
+    border-radius: 50% !important;
+    border: 2px solid transparent !important;
+    background: #f9f9f9 !important;
+    cursor: pointer;
+    transition: 0.3s;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.08);
+  }
+
+  .mood-card .emoji-button.active {
+    border-color: gray !important;
+    background: #e0ecff !important;
+    transform: scale(1.1);
+    width: 30px !important;
+    height: 40px !important;
+  }
+
+  .mood-card .close-btn {
+    position: absolute !important;
+    right: 8px;
+    width: 28px;
+    height: 28px;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 999px;
+    border: none !important;
+    background: rgba(0, 0, 0, 0.7) !important;
+    color: #fff !important;
+    font-size: 14px;
+    cursor: pointer;
+    z-index: 10;
+  }
+
+  .emotion-wheel {
+    position: relative;
+    width: 300px;
+    height: 250px;
+    margin: 0 auto;
+    border-radius: 50%;
+    background: radial-gradient(circle, #fafafa 70%, transparent 71%);
+    margin-top: -10px;
+  }
 }
