--- a/src/component/landingPage/LandingPage.css
+++ b/src/component/landingPage/LandingPage.css
@@ -95,21 +95,21 @@
 }
 
 .landing-page button {
-  background-color: #4caf50;
+  display: flex;
   border: none;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: block;
   font-size: 16px;
-  margin-top: 20px;
+  margin-top: 22px;
   cursor: pointer;
   border-radius: 10px;
 }
 .landing-page button:hover {
   background-color: #45a049;
   transition: ease 0.3s;
+  text-align: left;
 }
 
 .landing-page-wrapper {
@@ -198,8 +198,7 @@
 
   .landing-page button {
     width: 100%;
-    max-width: 260px;
-    margin-left: 60px;
+    max-width: fit-content;
     font-size: clamp(0.85rem, 2.3vw, 16px);
   }
 
@@ -240,7 +239,13 @@
     font-size: clamp(0.85rem, 3.8vw, 14px);
     width: 100%;
     text-align: center;
-    margin-left: 2rem;
     margin-bottom: 24px;
   }
 }
+
+/* @media (min-width: 769px) and (max-width: 889px) {
+  .landing-page button {
+    margin-top: 100px;
+    font-size: clamp(0.85rem, 2.3vw, 16px);
+  }
+} */
