Modified: changed name of classname userLogin to shuffle

--- a/src/component/landingPage/meditationPage/demoMeditation/DemoMeditation.css
+++ b/src/component/landingPage/meditationPage/demoMeditation/DemoMeditation.css
@@ -53,7 +53,7 @@
     display: flex;
   }
 
-  .demo-meditation-page .userLogin-button {
+  .demo-meditation-page .shuffle-button {
     display: flex;
     width: 100vw;
     justify-content: center;
