minor change css

--- a/src/features/auth/signup/screens/UserSignup.module.css
+++ b/src/features/auth/signup/screens/UserSignup.module.css
@@ -6,6 +6,7 @@
   background-image: url("../../../../assets/images/sunset.jpg");
   background-size: cover;
   position: fixed;
+  left: 0;
 }
 
 .content {
